BW-24 Upgrading the Blog Builder and enabling authentication (#5)
* BW-24 First crack at the Blog Builder UI

* Adding API endpoint and updating lambda func

* Adding auth to endpoints

* Updated landing page doc
